--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,11 +1,24 @@
-<div class="container" style="margin-top:50px">
+
+<div class="container" style="margin-top:10% ">
+  <h2>메일을 보냅시다</h2>
 <form action="/write" method="POST">
-  <div class="form-group" >
-    <label for="exampleInputEmail1">제목</label>
-    <input type="text" name="mama" class="form-control" id="exampleInputEmail1" placeholder="제목">
+  <div class="form-group">
+    <label for="exampleInputEmail1">보내는 사람</label>
+    <input name="qh" type="email" class="form-control" id="exampleInputEmail1" placeholder="보내는 사람의 메일주소를 써주세요">
   </div>
-  <label for="exampleInputEmail1">내용</label>
-   <textarea name="baba" class="form-control" rows="5" id="comment" placeholder="내용"></textarea>
-  <button type="submit" class="btn btn-default">전송</button>
+  <div class="form-group">
+    <label for="exampleInputEmail1">받는 사람</label>
+    <input name="qke" type="email" class="form-control" id="exampleInputEmail1" placeholder="받는 사람의 메일 주소를 써주세요">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">메일 제목</label>
+    <input name="title" type="text" class="form-control" id="exampleInputEmail1" placeholder="메일의 제목을 써주세요">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">메일 내용</label>
+    <textarea name="content" class="form-control" rows="5" id="comment" placeholder="메일 내용을 입력해주세요."></textarea>
+    </div>
+  <button type="메일보내기" class="btn btn-default">Submit</button>
 </form>
+
 </div>
