--- a/app/views/home/list.erb
+++ b/app/views/home/list.erb
@@ -1,9 +1,11 @@
-<h1>여기는 게시판 지난글입니다.</h1>
+<h1>보낸메일함.</h1>
 <% @every_post.each do |p|%>
+보낸사람 : <%= p.sender %> <br>
 제목 : <%= p.title %> <br>
 내용 : <%= p.content %> <br>
+받는사람 : <%= p.receiver %> <br>
 시간 : <%= p.created_at %>
 <hr>
 
 <% end %>
-<h1><a href="/">게시판 글쓰러가기</a> </h1>
+<h1><a href="/">메일 보내러가기</a> </h1>
